--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
     </header>
     <!-- Fine Header -->
 
+    <!-- Inizio Main -->
+    <main>
+        <div class="jumbo">
+            <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+            <p>Finalmente tutti i tuoi strumenti,contenuti e collaboratori sono accessibili dallo stesso posto.Dropbox
+                Buisiness è piu di uno spazio di archiviazione sicuro:è un modo intelligente e integrato per ottimizzare
+                il flusso di lavoro esistente</p>
+            <button class="button">Inizia la tua prova gratuita</button>
+        </div>
+
+
+
+
+    </main>
+
 
 
 </body>
