--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 Buisiness è piu di uno spazio di archiviazione sicuro:è un modo intelligente e integrato per ottimizzare
                 il flusso di lavoro esistente</p>
             <button class="button">Inizia la tua prova gratuita</button>
+            <img src="img/jumbo.png" alt="jumbotron" class="jumbo-img">
         </div>
 
 
