--- a/index.html
+++ b/index.html
@@ -37,22 +37,20 @@
 
     <!-- Inizio Main -->
     <main>
-        <div class="jumbo">
+        <section id="jumbotron">
             <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-            <p>Finalmente tutti i tuoi strumenti,contenuti e collaboratori sono accessibili dallo stesso posto.Dropbox
-                Buisiness è piu di uno spazio di archiviazione sicuro:è un modo intelligente e integrato per ottimizzare
-                il flusso di lavoro esistente</p>
-            <button class="button">Inizia la tua prova gratuita</button>
-            <img src="img/jumbo.png" alt="jumbotron" class="jumbo-img">
-        </div>
-
-
-
-
+            <div class="jumbo-container">
+                <div class="jumbo-info">
+                    <div class="jumbo-left">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono
+                        accessibili dallo stesso posto.Dropbox Buisiness è piu di uno spazio di archiviazione sicuro:è
+                        un modo intelligente e intgrato per ottimizzare il flusso di lavoro esistente.
+                        <button class="button">Inizia la tua prova gratuita</button>
+                    </div>
+                    <div class="jumbo-right"> <img src="img/jumbo.png" alt="jumbo"></div>
+                </div>
+            </div>
+        </section>
     </main>
-
-
-
 </body>
 
 </html>
