--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
                     <div class="jumbo-left">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono
                         accessibili dallo stesso posto.Dropbox Buisiness è piu di uno spazio di archiviazione sicuro:è
                         un modo intelligente e intgrato per ottimizzare il flusso di lavoro esistente.
-                        <button class="button">Inizia la tua prova gratuita</button>
+                        <button class="button">Inizia la prova gratuita</button>
+                        <a href="#">Annulla in qualsiasi momento</a>
+                        <i class="fa-solid fa-arrow-down"></i>
                     </div>
                     <div class="jumbo-right"> <img src="img/jumbo.png" alt="jumbo"></div>
                 </div>
+
             </div>
         </section>
     </main>
