feat:add button and h3

--- a/index.html
+++ b/index.html
@@ -50,9 +50,19 @@
                     </div>
                     <div class="jumbo-right"> <img src="img/jumbo.png" alt="jumbo"></div>
                 </div>
-
             </div>
         </section>
+
+        <nav id="business-plan">
+            <h3>Trova il piano business che fa per te</h3>
+            <div class="business">
+                <button class="business-button"></button>
+                <p>Fatturazione Mensile</p>
+                <button class="business-button"></button>
+                <p> Fatturazione Annuale</p>
+            </div>
+        </nav>
+
     </main>
 </body>
 
