--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
     <!-- Inizio Main -->
     <main>
+        <!-- Jumbotron -->
         <section id="jumbotron">
             <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
             <div class="jumbo-container">
@@ -52,18 +53,44 @@
                 </div>
             </div>
         </section>
+        <!-- Fine Jumbotron -->
 
+        <!-- Inizio Business Plan -->
         <nav id="business-plan">
             <h3>Trova il piano business che fa per te</h3>
             <div class="business">
-                <button class="business-button"></button>
+                <button class="button-color"></button>
                 <p>Fatturazione Mensile</p>
-                <button class="business-button"></button>
+                <button class="gray"></button>
                 <p> Fatturazione Annuale</p>
             </div>
         </nav>
+        <!-- Fine Business plan -->
+
+        <!-- Inizio Lista Professional plan -->
+        <div class="pricing-container">
+            <div class="pricing-card">
+                <p class="user"><i class="fa-solid fa-user"></i> Singolo</p>
+                <div class="pricing-header">
+                    <h2>Professional</h2>
+                    <div class="pricing-price">
+                        <span>€12.00</span>/mese
+                    </div>
+                    <p><i class="fa-solid fa-user"></i>1 utente<br><i class="fa-solid fa-folder"></i>5 TB di spazio di
+                        archiviazione sicuro</p>
+                    <p><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione semplice e
+                        sicura</p>
+                </div>
+                <button class="button">Prova gratis per 30 giorni</button>
+            </div>
+        </div>
+        </div>
+
+
+
 
     </main>
 </body>
+
 
 </html>
